@@ -1,3 +1,6 @@
+Sigil v0.4.0 ß4 ADD_DATE
+    - fixed an issue with paths in the OPF not being URL-encoded (issue #823) 
+
 Sigil v0.4.0 ß3 2011.03.24
     - added a workaround for loading broken epub files that use the incorrect mimetype for the 
     NCX (issue #815)
